--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DMARROQUINL1 }}
+        username: dmarroquinl1
         password: ${{ secrets.DMARROQUINL1 }}
 
     - name: Build and push Docker image
@@ -24,4 +24,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: DMARROQUINL1/nextjs-ssr-app:latest # <--- ¡ACTUALIZA TU USUARIO AQUÍ!
+        tags: dmarroquinl1/nextjs-ssr-app:latest # <--- ¡ACTUALIZA TU USUARIO AQUÍ!
